<resources>
    <string name="app_name">betterTrialBook</string>
    <string name="main_home_screen">BetterTrial Book</string>
    <string name="subscription_screen">Subscription</string>
    <string name="statsInformation">Stats Info</string>
    <string name="title_activity_statisitc_information">Statistic Information</string>
    <string name="title_activity_statistic_home_page">Statistic</string>
    <string name="title_activity_experiment_view">ExperimentViewActivity</string>
    <string name="title_activity_line_graph">Line Graph Data</string>
    <string name="first_fragment_label">First Fragment</string>

    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ID">ID</string>

    <!-- Strings used in the initial screen -->
    <string name="Status">Status</string>
    <string name="type_display">Type:</string>
    <string name="sort_display">Sort:</string>
    <string name="trialType">TrialType</string>
    <string name="scanQR_text">Scan QR</string>
    <string name="createQR_text">Create</string>
    <string name="description">Description</string>
    <string name="profile_description">Profile Image</string>
    <string name="post_question">Post Question</string>

    <!--    Strings used in forum-->
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="post_reply">Reply</string>
    <string name="submit">Submit</string>

    <!--    General purpose strings-->
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_geolocation">Map</string>
    <string name="add_scanned_trial">Add Trial</string>
    <string-array name="experimentTypes">
        <item>Count-Based</item>
        <item>Binomial</item>
        <item>Non-Negative Integer</item>
        <item>Measurement</item>
    </string-array>
    <string-array name="SearchTarget">
        <item>UserId</item>
        <item>Description</item>
    </string-array>

    <string-array name="TrialTarget">
        <item>ALL</item>
        <item>Count Based</item>
        <item>Non-Negative Based</item>
        <item>Measurement Based</item>
        <item>Binomial Based</item>
    </string-array>

    <string-array name="Options">
        <item>Data: Mean Over Time</item>
        <item>Data: Median Over Time</item>
        <item>Data: StdDev Over Time</item>
    </string-array>

</resources>