<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="301dp"
        android:layout_height="98dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Description_Text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/ID_Text"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/ID" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Type_Display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type_display"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TrialType_Text"
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/trialType"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Status_Text"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/Status"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>